--- a/Core/Core.Application/Core.Application.csproj
+++ b/Core/Core.Application/Core.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Dapr.Client" Version="1.11.0" />
   </ItemGroup>
   
 </Project>
