--- a/src/Lending/API/Lending.API/Lending.API.csproj
+++ b/src/Lending/API/Lending.API/Lending.API.csproj
@@ -23,6 +23,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Core\Core.Application\Core.Application.csproj" />
+    <ProjectReference Include="..\..\Domain\Patron\Patron\PatronAggregate.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Lending.Infrastructure\Lending.Infrastructure.csproj" />
   </ItemGroup>
   
 </Project>
