--- a/src/Lending/Tests/Lending.IntegrationTests/Lending.IntegrationTests.csproj
+++ b/src/Lending/Tests/Lending.IntegrationTests/Lending.IntegrationTests.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture.Xunit2" Version="4.18.0" />
-    <PackageReference Include="FluentAssertions" Version="6.11.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -25,8 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Domain\Patron\Patron\PatronAggregate.csproj" />
-    <ProjectReference Include="..\..\Infrastructure\Lending.Infrastructure\Lending.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\API\Lending.API\Lending.API.csproj" />
   </ItemGroup>
 
 </Project>
