Add language ext Add patronhold endpoint tests

--- a/src/Lending/Infrastructure/Lending.Infrastructure/Lending.Infrastructure.csproj
+++ b/src/Lending/Infrastructure/Lending.Infrastructure/Lending.Infrastructure.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>annotations</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LanguageExt.Core" Version="4.4.3" />
     <PackageReference Include="NRedisStack" Version="0.8.0" />
   </ItemGroup>
 
