Add configuration handling Fix tests

--- a/src/Lending/API/Lending.API/appsettings.json
+++ b/src/Lending/API/Lending.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DaprMicroservices-3EA58D71-FB94-4FBF-B643-2303120343;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "localhost:6379"
   },
   "Serilog": {
     "MinimumLevel": {
