--- a/src/Lending/API/Lending.API/Lending.API.csproj
+++ b/src/Lending/API/Lending.API/Lending.API.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapr.AspNetCore" Version="1.9.0" />
+    <PackageReference Include="Dapr.Actors" Version="1.11.0" />
+    <PackageReference Include="Dapr.AspNetCore" Version="1.11.0" />
     <PackageReference Include="FastEndpoints" Version="5.11.0" />
     <PackageReference Include="FastEndpoints.Swagger" Version="5.11.0" />
     <PackageReference Include="Man.Dapr.Sidekick.AspNetCore" Version="1.2.1" />
