--- a/src/Lending/API/Lending.API/Lending.API.csproj
+++ b/src/Lending/API/Lending.API/Lending.API.csproj
@@ -8,10 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Dapr.Actors" Version="1.11.0" />
+    <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.11.0" />
     <PackageReference Include="Dapr.AspNetCore" Version="1.11.0" />
-    <PackageReference Include="FastEndpoints" Version="5.11.0" />
-    <PackageReference Include="FastEndpoints.Swagger" Version="5.11.0" />
+    <PackageReference Include="FastEndpoints" Version="5.14.0" />
+    <PackageReference Include="FastEndpoints.Swagger" Version="5.14.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.6.0" />
     <PackageReference Include="Man.Dapr.Sidekick.AspNetCore" Version="1.2.1" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.9" />
     <PackageReference Include="OpenTelemetry.Exporter.Zipkin" Version="1.4.0-rc.1" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.4.0-rc.1" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.10" />
@@ -21,7 +25,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.2" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <InternalsVisibleTo Include="Lending.IntegrationTests" />
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\..\..\Core\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\..\Domain\Patron\Patron\PatronAggregate.csproj" />
