--- a/src/Lending/Tests/Lending.IntegrationTests/Lending.IntegrationTests.csproj
+++ b/src/Lending/Tests/Lending.IntegrationTests/Lending.IntegrationTests.csproj
@@ -10,9 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.Proxy" Version="4.4.0" />
     <PackageReference Include="AutoFixture.Xunit2" Version="4.18.0" />
     <PackageReference Include="Dapr.Actors.AspNetCore" Version="1.11.0" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
+    <PackageReference Include="Man.Dapr.Sidekick" Version="1.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     <PackageReference Include="Moq" Version="4.18.4" />
