--- a/src/Core/Core.Application/Core.Application.csproj
+++ b/src/Core/Core.Application/Core.Application.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Dapr.Client" Version="1.11.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+  </ItemGroup>
   
 </Project>
