--- a/src/Core/Core.Application/Core.Application.csproj
+++ b/src/Core/Core.Application/Core.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Dapr.Client" Version="1.11.0" />
+    <PackageReference Include="Microsoft.Orleans.Client" Version="7.2.1" />
   </ItemGroup>
 
   <ItemGroup>
