--- a/src/Lending/Domain/Patron/Patron/PatronAggregate.csproj
+++ b/src/Lending/Domain/Patron/Patron/PatronAggregate.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.6.0" />
     <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="7.2.1" />
+    <PackageReference Include="Microsoft.Orleans.Sdk" Version="7.2.1" />
   </ItemGroup>
 
   <ItemGroup>
