Adding orleans persistence for books

--- a/src/Lending/API/Lending.API/appsettings.json
+++ b/src/Lending/API/Lending.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "localhost:6379"
+    "DefaultConnection": "localhost:6379",
+    "GrainStorage": "Server=localhost, 1433; Database=librarystore; User Id=sa; Password=Admin8admin"
   },
   "Serilog": {
     "MinimumLevel": {
