Revert "Adding orleans persistence for books"
This reverts commit 86b4544eadf825460cd3f0ea32064f645fad6ece.

--- a/src/Lending/API/Lending.API/appsettings.json
+++ b/src/Lending/API/Lending.API/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "localhost:6379",
-    "GrainStorage": "Server=localhost, 1433; Database=librarystore; User Id=sa; Password=Admin8admin"
+    "DefaultConnection": "localhost:6379"
   },
   "Serilog": {
     "MinimumLevel": {
