--- a/src/Lending/Domain/Book/Book/BookAggregate.csproj
+++ b/src/Lending/Domain/Book/Book/BookAggregate.csproj
@@ -1,13 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Core\Core.Domain\Core.Domain.csproj" />
