--- a/src/Lending/Tests/Lending.Tests.UnitTests/Lending.Infrastructure.UnitTests.csproj
+++ b/src/Lending/Tests/Lending.Tests.UnitTests/Lending.Infrastructure.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -13,6 +13,7 @@
     <PackageReference Include="AutoFixture.Xunit2" Version="4.18.0" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\API\Lending.API\Lending.API.csproj" />
     <ProjectReference Include="..\..\Domain\Patron\Patron\PatronAggregate.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Lending.Infrastructure\Lending.Infrastructure.csproj" />
   </ItemGroup>
